--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "movieindex-app",
+  "name": "movidex-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
+  },
   "scripts": {
-    "start": "echo \"Add a React build setup (e.g. CRA, Vite)\" && exit 1"
+    "start": "echo \"Add a React+TypeScript build setup (e.g. Vite, CRA)\" && exit 1"
   }
 }
