--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,9 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Node.js
+/app/node_modules
+
+# VS Code
+/.vscode
