set up db connection

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,7 @@
 fastapi
 uvicorn
-<<<<<<< Updated upstream
-=======
 sqlalchemy
 asyncpg
 python-jose[cryptography]
->>>>>>> Stashed changes
+python-dotenv
+greenlet
