--- a/app/package.json
+++ b/app/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@types/node": "^24.0.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "vite": "^5.3.5",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.3.5"
   },
   "scripts": {
     "start": "vite",
