--- a/vercel.json
+++ b/vercel.json
@@ -10,13 +10,16 @@
         },
         {
             "src": "api/main.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "runtime": "python3.9"
+            }
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "api/main.py"
+            "dest": "/api/main.py"
         },
         {
             "src": "/(.*)",
