--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.104.1"
 uvicorn = "^0.25.0"
 sqlalchemy = "^2.0.20"
 asyncpg = "^0.29.0"
+greenlet = "^3.0.0"
 python-dotenv = "^1.0.0"
 authlib = "^1.6.0"
 python-jose = "^3.5.0"
